--- a/xlights.rc
+++ b/xlights.rc
@@ -1,4 +1,5 @@
 #! /bin/sh
+
 ### BEGIN INIT INFO
 # Provides: xlights
 # Required-Start: $remote_fs $syslog
@@ -10,4 +11,18 @@
 ### END INIT INFO
 
 cd /home/dietpi/xlights_WS2801
-python lights.py daemon lights.json >> /var/log/xlights/`date +"%F"`.log  2>&1 &
+
+case "$1" in
+  start|restart|force-reload)
+    sudo kill -9 $(ps aux | grep lights.py | grep -v grep | awk '{print $2}')
+    python off.py
+    python lights.py daemon lights.json >> /var/log/xlights/`date +"%F"`.log  2>&1 &
+    ;;
+  stop)
+    sudo kill -9 $(ps aux | grep lights.py | grep -v grep | awk '{print $2}')
+    python off.py
+    ;;
+  status)
+    ps aux | grep lights.py | grep -v grep | awk '{print $2}'
+    ;;
+esac
